--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 }
 
 .jumbotron {
-  background-image:url('yogi.jpg');
+  background-image:url('assets/yogi.jpg');
   height: 1000px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -36,6 +36,6 @@
 }
 
 .body {
-  background-image: url ("yogi.jpg");
+  background-image: url ("assets/yogi.jpg");
   background-repeat: repeat-y;
 }
