--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,12 @@
   font-size: 60px;
   font-family: "Lucida Grande", sans-serif;
   font-weight: bold;
+  padding-left: 20px;
 }
 
 .jumbotron p {
   font-size: 20px;
+  padding-left: 30px;
   color: #fff;
 }
 
