--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ height: 20px;
 
 
 .jumbotron {
-  background-image:url('../assets/yogi.jpeg');
   height: 800px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -35,7 +34,7 @@ height: 20px;
 }
 
 .jumbotron h1 {
-  color: #fff;
+  color: #000000;
   font-size: 60px;
   font-family: "Lucida Grande", sans-serif;
   font-weight: bold;
