--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ height: 20px;
 .jumbotron p {
   font-size: 20px;
   padding-left: 60px;
-  color: #fff;
+  color: #000000;  
   font-weight: bold;
   font-family: "Lucida Grande", serif;;
 }
