--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ height: 20px;
   font-family: "Lucida Grande", serif;;
 }
 
-.body {
+body {
   background-color: #000000;
   background-image: url("whaleBold.png");
 }
