--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ height: 20px;
 
 body {
   /* background: url("whaleBold.png") repeat;*/
-  min-height: 100%;
-  background: white url(whaleBold.png)
+background-color: lightblue;
+  /* background: white url(whaleBold.png)*/
 
 }
