--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ height: 20px;
 
 body {
   /* background: url("whaleBold.png") repeat;*/
-background-color: lightblue;
+background-color: #97FFFF;
   /* background: white url(whaleBold.png)*/
 
 }
