--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .nav a {
-  color: #00CED1;
+  color: #808A87;
   font-size: 20px;
   padding: 20px 30px;
   font-family: sans-serif;
@@ -24,7 +24,7 @@ height: 20px;
 }
 
 .jumbotron h1 {
-  color: #000000;
+  color: #27408B;
   font-size: 60px;
   font-family: "Lucida Grande", sans-serif;
   font-weight: bold;
@@ -34,14 +34,15 @@ height: 20px;
 .jumbotron p {
   font-size: 20px;
   padding-left: 60px;
-  color: #000000;
+  color: #27408B;
   font-weight: bold;
   font-family: "Lucida Grande", serif;;
 }
 
 body {
   /* background: url("whaleBold.png") repeat;*/
-background-color: #97FFFF;
-  /* background: white url(whaleBold.png)*/
+background-color: #E0FFFF;
+background: url(whaleBold.png);
+background-size: 10%;
 
 }
