--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
   /* background: url("whaleBold.png") repeat;*/
 background-color: #E0FFFF;
 background: url(whaleBold.png);
-background-size: 50%;
-background-repeat: repeat-x;
+background-size: 35%;
+background-repeat: round;
 
 }
